# cyan_cam_v4l2

./: .gitignore  CMakeLists.txt  config.h.in
src/: buffers_init_mmap.c  buffers_init_read.c  buffers_init_userp.c  cam_v4l2.h  close_device.c  config.h  convert_v4l_mode_to_cyan.c  cyan_deinit.c  cyan_get_frame.c  cyan_get_mode.c  cyan_get_serial.c  cyan_init.c  cyan_interface.c  cyan_start_acqui.c  cyan_stop_acqui.c  deinit.c  device_close.c  device_get_available_modes.c  device_get_frame.c  device_init.c  device_open.c  device_start.c  device_stop.c  device_uninit.c  get_available_modes.c  get_frame.c  get_mode.c  get_modes.backup  get_modes.c  get_serial.c  init.c  init_device.c  main.c  open_device.c  set_mode.c  start_acqui.c  start_device.c  stop_acqui.c  stop_device.c  uninit_device.c  (+1 more)
src/biblio/: capture.c  test  v4l2grab.c
test/: CMakeLists.txt  main.c
